@@ -1,0 +1,5 @@
+#+OPTIONS: toc:nil
+
+* wrapper-TAT
+
+wrapper TAT is a library to wrap other tensor library to TAT interface.
