@@ -5,6 +5,7 @@
 *** Added
 + *tetragono*: Add =ap_hamiltonian= to replace the hamiltonian of the ansatz product state in tetragono shell.
 + *tetragono*: Add =multichain_number= for =ap_run=, which will run multiple chains inside the same MPI process.
++ *wrapper*: Add python package =wrapper_TAT= to provide a wrapper over torch to provide similar interface as =TAT.py=.
 *** Changed
 *** Deprecated
 + *tetragono*: =gm_data_load= is deprecated, it will be removed in the future, please use =gm_hamiltonian= to replace
